--- a/sass/forms.scss
+++ b/sass/forms.scss
@@ -84,7 +84,7 @@ textarea {
 .checkbox-inline input[type="checkbox"] {
   position: absolute;
   margin-left: -20px;
-  margin-top: 4px \9;
+  margin-top: 4px;
 }
 
 .radio + .radio,
